# MyTrade

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MyTrade使用指南.md  P0_IMPLEMENTATION_PLAN.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_tests.py  test_all_fixed.py  项目结构清理报告.md
.claude/: settings.local.json
configs/: agents_config.yaml
docs/: TradingAgents_Optimization_Analysis.md
reports/: A股10000元投资组合修正版_符合交易规则_20250905.md  A股大盘深度行情分析报告_包含今日最新数据_20250905.md  A股大盘深度行情分析报告_近期走势与后市展望_20250905.md  A股投资建议报告_10000元本金20%收益目标_20250906.md  A股深度投资分析报告_10000元投资组合_20250905.md  README.md  a_stock_investment_analysis.json  个人投资建议报告_基于当前持仓分析_20250905.md  个人投资建议报告_完整版_基于全面市场分析_20250905.md  个人持有基金深度分析报告_逐只详解_20250905.md  激进投资策略报告_追求20%年化收益_20250905.md  紫金矿业最新行情分析报告_20250905.md  紫金矿业行情分析报告_20250904.md  详细投资计划报告_基于50.6万资产配置_20250905.md
test/: A股深度分析报告.md  INTEGRATION_TEST_REPORT.md  TUSHARE_SETUP_GUIDE.md  analyze_astock_accurate.py  analyze_astock_morning.py  analyze_astock_realtime.py  analyze_astock_today.py  analyze_comprehensive_market.py  analyze_market_for_investment.py  analyze_market_today.py  analyze_zijin_mining.py  astock_accurate_analysis.md  astock_accurate_data.json  astock_analysis_data.json  astock_analysis_report.md  astock_final_complete_data.json  astock_final_complete_report.md  astock_realtime_analysis.md  astock_realtime_data.json  best_index_data.json  complete_zijin_analysis.py  debug_data_sources.py  demo_cli.py  (+66 more)
(+89 files in other folders)
