[tool.poetry]
name = "mytrade"
version = "0.1.0"
description = "A TradingAgents-based quantitative trading system for A-shares"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
numpy = "^1.24.0"
akshare = "^1.11.0"
tushare = "^1.3.0"
pydantic = "^2.5.0"
pyyaml = "^6.0.1"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
matplotlib = "^3.7.0"
plotly = "^5.17.0"
openai = "^1.3.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
httpx = "^0.25.0"
python-multipart = "^0.0.6"
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mytrade"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true